# ganglion

./: .gitignore  API.md  Cargo.toml  DESIGN.md  EXAMPLES.md  FAILURE_MODES.md  JEPSEN_PLAN.md  OPENRAFT_MIGRATION.md  OPENRAFT_SURVIVAL_CONTEXT.md  PLAN.md  README.md  SURFACE_INVENTORY.md  WORKLOG.md
crates/ganglion/: Cargo.toml
crates/ganglion-coordination/: Cargo.toml
crates/ganglion-coordination/src/: lib.rs
crates/ganglion-core/: Cargo.toml
crates/ganglion-core/proptest-regressions/: lib.txt
crates/ganglion-core/src/: lib.rs
crates/ganglion-openraft/: Cargo.toml
crates/ganglion-openraft/examples/: cluster_demo.rs
crates/ganglion-openraft/proptest-regressions/: lib.txt
crates/ganglion-openraft/proptest-regressions/openraft_runtime/: durable.txt  storage.txt
crates/ganglion-openraft/src/: lib.rs  openraft_runtime.rs
crates/ganglion-openraft/src/openraft_runtime/: durable.rs  mod.rs  network.rs  node.rs  storage.rs  tcp.rs
crates/ganglion-storage/: Cargo.toml
crates/ganglion-storage/proptest-regressions/: lib.txt
crates/ganglion-storage/src/: lib.rs
crates/ganglion/src/: lib.rs
scripts/: cluster-playground.sh  jepsen.sh  proptest.sh  storage-parity.sh  validate.sh
tests/jepsen/: README.md  run.sh
tests/jepsen/scenarios/: 01-baseline-failover.sh  02-partition-split-brain.sh  03-crash-recovery.sh  04-startup-entrypoint-smoke.sh  05-startup-policy-matrix.sh  06-persistence-backend-parity.sh  07-raft-runtime-failover.sh  08-playground-smoke.sh  failover-baseline.md
