[package]
name = "ganglion-openraft"
version = "0.1.0"
edition = "2021"

[dependencies]
ganglion-core = { path = "../ganglion-core" }
ganglion-storage = { path = "../ganglion-storage" }
openraft = { version = "0.8", optional = true, default-features = false, features = ["serde", "storage-v2"] }
tokio = { version = "1", optional = true, default-features = false, features = ["rt-multi-thread", "sync", "time"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

[dev-dependencies]
ganglion-coordination = { path = "../ganglion-coordination" }
proptest = "1"

[features]
default = []
openraft = ["dep:openraft", "dep:tokio", "dep:serde", "dep:serde_json"]

# openraft's declare_raft_types! macro expands `cfg(feature = "serde")` checks
# into this crate, which doesn't define that feature name.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("serde"))'] }
