[package]
name = "ganglion-storage"
version = "0.1.0"
edition = "2021"

[features]
default = []
keratin = ["dep:keratin-log", "dep:futures"]

[dependencies]
ganglion-core = { path = "../ganglion-core" }
futures = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.keratin-log]
path = "../../../keratin/keratin-log"
optional = true
